# VisionNotes

./: README.md
DSVC-mod/assignment1/: test.py
DSVC-mod/assignment1/classwork/: knn-zh.ipynb
DSVC-mod/assignment2/: README.md
DSVC-mod/assignment2/classwork/: boston_housing.html  boston_housing.ipynb
DSVC-mod/assignment3/classwork/: logistic_regression.html  logistic_regression.ipynb
DSVC-mod/assignment4/classwork/: decision_tree.ipynb
DigitalImageProcessing/: DigitalImageProcessing.sln  DigitalImageProcessing.vcxproj
DigitalImageProcessing/Chapter2/: Chapter2.cpp  Chapter2.vcxproj  Chapter2.vcxproj.filters
DigitalImageProcessing/DigitalImageProcessing/: DigitalImageProcessing.sln
OpenCV/cpp-opencv/: .gitignore  CMakeLists.txt
OpenCV/py-opencv/: .gitignore  color.py  opencv_tutorial_01.py  opencv_tutorial_02 .py  otsu.py  plt.py  roi.py  test.py  threshold.py  trackbar.py  trans.py
OpenGL/GLStudy/: .gitignore  CMakeLists.txt  main.cpp
PyTorchStudy/: .gitignore  linear.ipynb  study1.ipynb  study2.ipynb  study4.ipynb
PyTorchStudy/.ipynb_checkpoints/: linear-checkpoint.ipynb  study1-checkpoint.ipynb  study2-checkpoint.ipynb  study3-checkpoint.ipynb
PyTorchStudy/py_files/: study3.py  study4.py
Python399MoocCourse/class3/: 3.2.ipynb  3.3.ipynb  hello.py
PythonLibLearning/: numpy_study.ipynb  test_tensorflow.ipynb
PythonLibLearning/.ipynb_checkpoints/: test_face-checkpoint.ipynb  test_tensorflow-checkpoint.ipynb
StatisticalLearningMethod/: numpy_study.ipynb
StatisticalLearningMethod/.ipynb_checkpoints/: numpy_study-checkpoint.ipynb
(+9 files in other folders)
